// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TimePicker > Snapshots > should match snapshot - 12 hour format 1`] = `
<div>
  <div
    class="relative inline-block w-full max-w-xs"
  >
    <div
      class="relative flex items-center"
    >
      <input
        aria-label="Select time"
        class="w-full rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:border-transparent transition-colors duration-200 pr-20 px-3 py-2 text-base bg-white text-gray-900 cursor-pointer hover:border-gray-400"
        placeholder="Select time"
        readonly=""
        type="text"
        value="02:30 PM"
      />
      <button
        aria-label="Clear time"
        class="absolute right-10 flex items-center justify-center w-6 h-6 text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:ring-offset-1 rounded transition-colors duration-200"
        type="button"
      >
        <svg
          class="w-4 h-4"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Toggle time picker"
        class="absolute right-1 flex items-center justify-center text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:ring-offset-1 rounded transition-colors duration-200 disabled:cursor-not-allowed disabled:opacity-50 w-8 h-8"
        type="button"
      >
        <svg
          class="w-5 h-5"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`TimePicker > Snapshots > should match snapshot - default 1`] = `
<div>
  <div
    class="relative inline-block w-full max-w-xs"
  >
    <div
      class="relative flex items-center"
    >
      <input
        aria-label="Select time"
        class="w-full rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:border-transparent transition-colors duration-200 pr-20 px-3 py-2 text-base bg-white text-gray-900 cursor-pointer hover:border-gray-400"
        placeholder="Select time"
        readonly=""
        type="text"
        value=""
      />
      <button
        aria-label="Toggle time picker"
        class="absolute right-1 flex items-center justify-center text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:ring-offset-1 rounded transition-colors duration-200 disabled:cursor-not-allowed disabled:opacity-50 w-8 h-8"
        type="button"
      >
        <svg
          class="w-5 h-5"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`TimePicker > Snapshots > should match snapshot - disabled 1`] = `
<div>
  <div
    class="relative inline-block w-full max-w-xs"
  >
    <div
      class="relative flex items-center"
    >
      <input
        aria-label="Select time"
        class="w-full rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:border-transparent transition-colors duration-200 pr-20 px-3 py-2 text-base bg-gray-100 text-gray-400 cursor-not-allowed"
        disabled=""
        placeholder="Select time"
        readonly=""
        type="text"
        value=""
      />
      <button
        aria-label="Toggle time picker"
        class="absolute right-1 flex items-center justify-center text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:ring-offset-1 rounded transition-colors duration-200 disabled:cursor-not-allowed disabled:opacity-50 w-8 h-8"
        disabled=""
        type="button"
      >
        <svg
          class="w-5 h-5"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`TimePicker > Snapshots > should match snapshot - with seconds 1`] = `
<div>
  <div
    class="relative inline-block w-full max-w-xs"
  >
    <div
      class="relative flex items-center"
    >
      <input
        aria-label="Select time"
        class="w-full rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:border-transparent transition-colors duration-200 pr-20 px-3 py-2 text-base bg-white text-gray-900 cursor-pointer hover:border-gray-400"
        placeholder="Select time"
        readonly=""
        type="text"
        value="14:30:45"
      />
      <button
        aria-label="Clear time"
        class="absolute right-10 flex items-center justify-center w-6 h-6 text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:ring-offset-1 rounded transition-colors duration-200"
        type="button"
      >
        <svg
          class="w-4 h-4"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Toggle time picker"
        class="absolute right-1 flex items-center justify-center text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:ring-offset-1 rounded transition-colors duration-200 disabled:cursor-not-allowed disabled:opacity-50 w-8 h-8"
        type="button"
      >
        <svg
          class="w-5 h-5"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`TimePicker > Snapshots > should match snapshot - with value 1`] = `
<div>
  <div
    class="relative inline-block w-full max-w-xs"
  >
    <div
      class="relative flex items-center"
    >
      <input
        aria-label="Select time"
        class="w-full rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:border-transparent transition-colors duration-200 pr-20 px-3 py-2 text-base bg-white text-gray-900 cursor-pointer hover:border-gray-400"
        placeholder="Select time"
        readonly=""
        type="text"
        value="14:30"
      />
      <button
        aria-label="Clear time"
        class="absolute right-10 flex items-center justify-center w-6 h-6 text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:ring-offset-1 rounded transition-colors duration-200"
        type="button"
      >
        <svg
          class="w-4 h-4"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Toggle time picker"
        class="absolute right-1 flex items-center justify-center text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:ring-offset-1 rounded transition-colors duration-200 disabled:cursor-not-allowed disabled:opacity-50 w-8 h-8"
        type="button"
      >
        <svg
          class="w-5 h-5"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
